# OpenGL-Playground

./: .gitignore  CMakeLists.txt
includes/: camera.h  gl_debug.h  mathematics.h  model.h  obj_loader.h  shader.h  shadow.h  terrain.h  texture.h  utilities.h  window.h
includes/temp/: group_list.h  object_pool.h  swap_list.h
libraries/assimp-4.1.0/: Assimp.cbp  CMakeCache.txt  DartConfiguration.tcl  Makefile  assimp.pc  cmake_install.cmake  cmake_uninstall.cmake
libraries/assimp-4.1.0/code/: Makefile  X3DImporter.cpp  X3DVocabulary.cpp  cmake_install.cmake
libraries/assimp-4.1.0/contrib/: Makefile  cmake_install.cmake
libraries/assimp-4.1.0/contrib/irrXML/: Makefile  cmake_install.cmake
libraries/assimp-4.1.0/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libraries/assimp-4.1.0/test/headercheck/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libraries/assimp-4.1.0/tools/assimp_cmd/: CMakeLists.txt  CompareDump.cpp  Export.cpp  ImageExtractor.cpp  Info.cpp  Main.cpp  Makefile  WriteDumb.cpp  cmake_install.cmake
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
libraries/glfw-3.3.1/: .travis.yml  GLFW.cbp
libraries/glfw-3.3.1/docs/: compat.dox  extra.less
libraries/glfw-3.3.1/examples/: splitview.c
libraries/glfw-3.3.1/include/GLFW/: glfw3native.h
libraries/glfw-3.3.1/src/: cocoa_window.m  internal.h  vulkan.c  win32_window.c  x11_init.c
libraries/glfw-3.3.1/tests/: clipboard.c  cursor.c  empty.c  events.c  gamma.c  icon.c  iconify.c  inputlag.c  joysticks.c  monitors.c  msaa.c  opacity.c  reopen.c  tearing.c  threads.c  timeout.c  title.c  vulkan.c  windows.c
libraries/glm/: .travis.yml  CMakeLists.txt
libraries/glm/doc/api/: jquery.js
libraries/glm/glm/gtc/: quaternion_simd.inl
libraries/glm/glm/gtx/: matrix_decompose.inl
libraries/glm/test/gtc/: gtc_bitfield.cpp  gtc_quaternion.cpp
libraries/glm/test/gtx/: gtx_dual_quaternion.cpp
resources/models/: Cube.ted
resources/models/train_station/texturas/: pym.psd
resources/scripts/: component.py  obj_converter.py
resources/skybox/temp/: bottom.tga
shaders/: instanced.vertex.glsl  lightning.fragment.glsl  lightning.vertex.glsl  lightshadow.fragment.glsl  lightshadow.vertex.glsl  normal-debug.geometry.glsl  normal-debug.vertex.glsl  quad.fragment.glsl  quad.vertex.glsl  reflective.fragment.glsl  refractive.fragment.glsl  refractive.vertex.glsl  shadow.fragment.glsl  shadow.vertex.glsl  skybox.fragment.glsl  skybox.vertex.glsl  terrain.fragment.glsl  terrain.vertex.glsl
shaders/post-processing/: blur.fragment.glsl  edge-detection.fragment.glsl  grey-scale.fragment.glsl  inversion.fragment.glsl  screen.vertex.glsl  sharpen.fragment.glsl  view.fragment.glsl
source/: ecs.cpp  game.cpp  instance.cpp  main.cpp  shadow.cpp
